hello/src/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: xyz
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: nginxdemos/hello
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: xyz
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: hello
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello
  namespace: xyz
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: xyz
  hostnames:
  - "hello.ryanguild.localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hello
      port: 80
