hello/src/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-http-route
spec:
  hostnames:
    - hello.ryanguild.xyz
  parentRefs:
    - name: ngrok-gateway
      namespace: ngrok
  rules:
    - backendRefs:
        - name: hello
